FullQa New/src/PS Enterprise/objects/Project_Task_Gantt_Global_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>These settings control configurable elements of the Project Task Gantt at a global level, allowing you to customize functions for all instances in your organization.</description>
    <fields>
        <fullName>Bypass_Sharing_Settings_During_Save__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to true, Project Task Gantt overrides all Salesforce sharing settings when saving changes.</description>
        <inlineHelpText>If set to true, Project Task Gantt overrides all Salesforce sharing settings when saving changes.</inlineHelpText>
        <label>Bypass Sharing Settings During Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Save_Plugin_Class__c</fullName>
        <label>Save Plugin Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Save_Plugin_Namespace__c</fullName>
        <label>Save Plugin Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Dependancy_Lag_Designation__c</fullName>
        <defaultValue>&quot;hours&quot;</defaultValue>
        <inlineHelpText>Determines if the Project Task Dependency Lag Time formula field displays in days or hours. Values are &quot;days&quot; or &quot;hours&quot; The default value is &quot;hours&quot;.</inlineHelpText>
        <label>Task Dependancy Lag Designation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Project Task Gantt Global Settings</label>
</CustomObject>